Post status and sidebar spacing fixes
- Post status added to fix the issue for the Subscriber role, ensuring they now have the appropriate permissions to view docs.
- Improved the top spacing of the left sidebar on the OnePage docs

--- a/assets/css/ezd-docs-widgets.css
+++ b/assets/css/ezd-docs-widgets.css
@@ -322,7 +322,7 @@
 }
 @media (max-width: 991px) {
   .ezd-container-fluid {
-    padding-left: 15px !important;
+    padding-left: 0px !important;
     padding-right: 15px !important;
   }
 }
