--- a/assets/scss/frontend/_framework.scss
+++ b/assets/scss/frontend/_framework.scss
@@ -249,7 +249,7 @@
     padding-right: 50px !important;
     max-width: 100% !important;
 	@media (max-width: 991px) {
-		padding-left: 15px !important;
+		padding-left: 0px !important;
 		padding-right: 15px !important;
 	}
 }
